--- a/.screenrc
+++ b/.screenrc
@@ -1,6 +1,18 @@
 startup_message off
 vbell on
 defscrollback 1000
+bind c screen 1
+bind 0 select 10
+
+bind ^k
+bind L
+bind ^\
+
+screen -t main 1 irc
+screen -t main 2 im
+screen -t main 3 mpd
+screen -t main 4 dl
+
 
 altscreen on 
 hardstatus on
