--- a/.screenrc
+++ b/.screenrc
@@ -11,6 +11,8 @@ bind ^\
 altscreen on 
 hardstatus on
 
+screen -t 'fish' 1 'fish'
+
 hardstatus  alwayslastline '%{= G}[ %{G}%H %{g}][%= %{= w}%?%-Lw%?%{r}(%{W}%n*%f %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %Y-%m-%d %{W}%c %{g}]'
 attrcolor b ".I"
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
