--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -3,3 +3,8 @@
 file=/home/archlucas/./pictures/archlinux-wp-cf1-1680x1050.png
 mode=1
 bgcolor=# 0 0 0
+
+[:0.0]
+file=/home/archlucas/pictures/./archlinux-wp-cf1-1680x1050.png
+mode=1
+bgcolor=# 0 0 0
