--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -3,6 +3,8 @@ map <C-+> <Escape>:set go=bm<Return><Escape>
 map <C-=> <Escape>:set go=<Return><Escape>
 map gp <Escape>:tabprev<Return><Escape>
 map gn <Escape>:tabnext<Return><Escape>
+map gj <C-f>
+map gk <C-b>
 map <C-h> <Escape>:tabprev<Return><Escape>
 map <C-l> <Escape>:tabnext<Return><Escape>
 map gb gp
