--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,10 +1,10 @@
 
-[xin_-1]
-file=/home/archlucas/./pictures/archlinux-wp-cf1-1680x1050.png
+[:0.0]
+file=/home/archlucas/pictures/./archlinux-wp-cf1-1680x1050.png
 mode=1
 bgcolor=# 0 0 0
 
-[:0.0]
-file=/home/archlucas/pictures/./archlinux-wp-cf1-1680x1050.png
+[xin_-1]
+file=/home/archlucas/./pictures/Dark Glossy 1680x1050.png
 mode=1
 bgcolor=# 0 0 0
