--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -5,6 +5,6 @@ mode=1
 bgcolor=# 0 0 0
 
 [xin_-1]
-file=/home/archlucas/./pictures/Dark Glossy 1680x1050.png
+file=/home/archlucas/pictures/bg.png
 mode=1
 bgcolor=# 0 0 0
