--- a/.screenrc
+++ b/.screenrc
@@ -1,5 +1,5 @@
 startup_message off
-vbell on
+vbell off
 defscrollback 1000
 bind c screen 1
 bind 0 select 10
@@ -23,3 +23,4 @@ defbce "on"
 
 term screen-256color
 escape \034\034
+activity '-'
