--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -11,3 +11,7 @@ map gb gp
 set editor=g
 set showtabline=1
 set focuscontent
+
+map <Leader>q <Esc>:javas stumble()<CR><Esc>
+map <Leader>w <Esc>:javas su_rate(1, false, false, false)<CR><Esc>
+map <Leader>e <Esc>:javas su_rate(0, false, false, false)<CR><Esc>
