--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -8,3 +8,8 @@ bgcolor=# 0 0 0
 file=/home/archlucas/pictures/bg.png
 mode=1
 bgcolor=# 0 0 0
+
+[:1.0]
+file=/home/archlucas/pictures/bg.png
+mode=4
+bgcolor=# 0 0 0
