--- a/.irssi/config
+++ b/.irssi/config
@@ -84,7 +84,7 @@ channels = (
   { name = "#awesome"; chatnet = "oftc"; autojoin = "Yes"; },
   { name = "#archlinux"; chatnet = "freenode"; autojoin = "Yes"; },
   { name = "#xkcd"; chatnet = "foonetic"; autojoin = "Yes"; },
-  { name = "#xkcd-signal"; chatnet = "foonetic"; autojoin = "Yes"; }
+  { name = "#curseofsteel"; chatnet = "foonetic"; autojoin = "Yes"; }
 );
 
 aliases = {
