--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -32,5 +32,5 @@ map <Leader>, <Esc>:javas su_rate(1, false, false, false)<CR><Esc>
 map <Leader>. <Esc>:javas su_rate(0, false, false, false)<CR><Esc>
 
 " Faster scrolling
-nnoremap <C-e> 3<C-e>
-nnoremap <C-y> 3<C-y>
+noremap <C-e> 3<C-e>
+noremap <C-y> 3<C-y>
