--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -34,3 +34,6 @@ map <Leader>. <Esc>:javas su_rate(0, false, false, false)<CR><Esc>
 " Faster scrolling
 noremap <C-e> 3<C-e>
 noremap <C-y> 3<C-y>
+
+noremap j 3j
+noremap k 3k
