--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -64,3 +64,6 @@ dht_port = 6881
 
 # Enable peer exchange (for torrents not marked private)
 peer_exchange = yes
+
+# Throttle upload
+upload_rate = 50
