--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -35,5 +35,8 @@ map <Leader>. <Esc>:javas su_rate(0, false, false, false)<CR><Esc>
 noremap <C-e> 3<C-e>
 noremap <C-y> 3<C-y>
 
+" Comics
+map <Leader>comics <Esc>:tabopen cad<CR>:tabopen egs<CR>:tabopen pa<CR>:tabopen du<CR>:tabopen da<CR>:tabopen smbc<CR>:tabopen dilbert<CR>:tabopen jenny<CR>:tabopen sinfest<CR>:tabopen ts<CR>:tabopen el<CR>:tabopen f@<CR>:tabopen geek<CR>:tabopen oots<CR>:tabopen erf<CR>:tabopen vgcats<CR>:tabopen xkcd<CR>
+
 noremap j 3j
 noremap k 3k
