--- a/.rawdog/config
+++ b/.rawdog/config
@@ -180,7 +180,7 @@ tidyhtml false
 # displaying several feeds and want new articles to appear in the right
 # chronological place). If this is false, then articles will first be
 # sorted by the time that rawdog first saw them.
-sortbyfeeddate false
+sortbyfeeddate true
 
 # The fields to use when detecting duplicate articles: "id" is the article's
 # unique ID or GUID; "link" is the article's link. rawdog will find the first
@@ -191,7 +191,7 @@ sortbyfeeddate false
 # Note that some feeds use the same link for all their articles; if you specify
 # "link" here, you will probably want to specify the "allowduplicates" feed
 # argument (see below) for those feeds.
-hideduplicates id
+hideduplicates id link
 
 # The period to use for new feeds added to the config file via the -a|--add
 # option.
