--- a/.rawdog/config
+++ b/.rawdog/config
@@ -18,17 +18,17 @@ plugindirs plugins
 
 # The maximum number of articles to show on the generated page.
 # Set this to 0 for no limit.
-maxarticles 60
-articlesperpage 20
+maxarticles 200
+articlesperpage 40
 
 # The maximum age of articles to show on the generated page.
 # Set this to 0 for no limit.
-maxage 0
+maxage 3d
 
 # The age after which articles will be discarded if they do not appear
 # in a feed. Set this to a larger value if you want your rawdog output
 # to cover more than a day's worth of articles.
-expireage 1d
+expireage 3d
 
 # The minimum number of articles from each feed to keep around in the history.
 # Set this to 0 to only keep articles that were returned the last time the feed
@@ -37,13 +37,13 @@ expireage 1d
 # HTTP requests, since it can't tell from the response to such a request
 # whether any articles have been removed from the feed; this makes rawdog
 # slightly less bandwidth-efficient.)
-keepmin 20
+keepmin 30
 
 # Whether to only display articles that are currently included in a feed
 # (useful for "planet" pages where you only want to display the current
 # articles from several feeds). If this is false, rawdog will keep a
 # history of older articles.
-currentonly false
+currentonly true
 
 # Whether to divide the articles up by day, writing a "dayformat" heading
 # before each set.
@@ -145,18 +145,18 @@ showfeeds true
 # the same time.  If you have a lot of feeds, setting this to be 20 or
 # so will significantly speed up updates. If this is set to 0, rawdog
 # will not use threads at all.
-numthreads 0
+numthreads 20
 
 # The time that rawdog will wait before considering a feed unreachable
 # when trying to connect. If you're getting lots of timeout errors and
 # are on a slow connection, increase this.
 # (Unlike other times in this file, this will be assumed to be in
 # seconds if no unit is specified.)
-timeout 30s
+timeout 60s
 
 # Whether to ignore timeouts. If this is false, timeouts will be reported as
 # errors; if this is true, rawdog will silently ignore them.
-ignoretimeouts false
+ignoretimeouts true
 
 # Whether to display verbose status messages saying what rawdog's doing
 # while it runs. Specifying -v or --verbose on the command line is
