--- a/.planet/config.ini
+++ b/.planet/config.ini
@@ -111,6 +111,9 @@ activity_threshold = 0
 # Other
 [http://syndication.thedailywtf.com/TheDailyWtf]
 
+# News
+[http://rss.slashdot.org/Slashdot/slashdot]
+
 # Planets
 [http://planet.archlinux.org/rss20.xml]
 [http://planet.python.org/rss20.xml]
