--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/anime/NHK ni Youkoso
+latest_dir=/data/series/The Daily Show
 last_url=
 last_dvd_directory=
 
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/anime/NHK ni Youkoso
+latest_dir=/data/series/The Daily Show
 
 [playlist_contents]
 count=1
-item_0_filename=/data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_15_[1CD8F5B3].mkv
-item_0_duration=1429.93
-item_0_name=[Oyasumi]_Welcome_to_the_NHK!_15_[1CD8F5B3].mkv
+item_0_filename=/data/series/The Daily Show/The Daily Show_010509_pdtv_XviD~Ekolb.avi
+item_0_duration=1289.25
+item_0_name=The Daily Show_010509_pdtv_XviD~Ekolb.avi
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_15_[1CD8F5B3].mkv, /data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_14_[DDA2F730].mkv, /data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_13_[CDAADAFA].mkv, /data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_12_[3DB40A31].mkv, /data/anime/NHK ni Youkoso/[Oyasumi]_Welcome_to_the_NHK!_11_[61D5076B].mkv
+recents=/data/series/The Daily Show/The Daily Show_010509_pdtv_XviD~Ekolb.avi, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_25_(HD_H264_OGG)_[E4094FEC].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_24_(HD_H264_OGG)_[8E231949].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_23_(HD_H264_OGG)_[9BB2F6A9].mkv, "/data/series/QI/QI - Season 2/QI 2x07 - Arthur Smith, Rich Hall, Dara O'Greene.avi", "/data/series/QI/QI - Season 2/QI 2x06 - Annika Rice, Sean Lock, Bill Bailey.avi", "/data/series/QI/QI - Season 2/QI 2x05 - Bill Bailey, Jimmy Car, Jo Brand.avi", "/data/series/QI/QI - Season 2/QI 2x04 - Jeremey Clarkson, Barry Cryer, Jeremey Hardy [TD].avi", "/data/series/QI/QI - Season 2/QI 2x03 - Phill Jupitus, Clive Anderson, Rich Hall.avi", "/data/series/QI/QI - Season 2/QI 2x02 - Jo Brand, Phil Kay, Rich Hall [TD].avi"
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
