Huge vim config update.

--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/series/The Daily Show
+latest_dir=/data/anime/Nana TV
 last_url=
 last_dvd_directory=
 
@@ -171,7 +171,7 @@ initial_subtitle_track=1
 initial_stereo_mode=0
 
 [mplayer_info]
-mplayer_detected_version=27931
+mplayer_detected_version=28278
 mplayer_user_supplied_version=-1
 
 [instances]
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/series/The Daily Show
+latest_dir=/data/anime/Nana TV
 
 [playlist_contents]
 count=1
-item_0_filename=/data/series/The Daily Show/The Daily Show_010509_pdtv_XviD~Ekolb.avi
-item_0_duration=1289.25
-item_0_name=The Daily Show_010509_pdtv_XviD~Ekolb.avi
+item_0_filename=/data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv
+item_0_duration=1399.73
+item_0_name=[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/series/The Daily Show/The Daily Show_010509_pdtv_XviD~Ekolb.avi, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_25_(HD_H264_OGG)_[E4094FEC].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_24_(HD_H264_OGG)_[8E231949].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_23_(HD_H264_OGG)_[9BB2F6A9].mkv, "/data/series/QI/QI - Season 2/QI 2x07 - Arthur Smith, Rich Hall, Dara O'Greene.avi", "/data/series/QI/QI - Season 2/QI 2x06 - Annika Rice, Sean Lock, Bill Bailey.avi", "/data/series/QI/QI - Season 2/QI 2x05 - Bill Bailey, Jimmy Car, Jo Brand.avi", "/data/series/QI/QI - Season 2/QI 2x04 - Jeremey Clarkson, Barry Cryer, Jeremey Hardy [TD].avi", "/data/series/QI/QI - Season 2/QI 2x03 - Phill Jupitus, Clive Anderson, Rich Hall.avi", "/data/series/QI/QI - Season 2/QI 2x02 - Jo Brand, Phil Kay, Rich Hall [TD].avi"
+recents=/data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_27_(HD_H264_OGG)_[D645D49F].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_26_(HD_H264_OGG)_[F92FBE0E].mkv, /data/series/The Colbert Report/The Colbert Report_010709_PDTV_XviD~Ekolb.avi, /data/series/Firefly.2002.720p.BluRay.DTS.x264-ESiR/Firefly.2002.Ep02.720p.BluRay.DTS.x264-ESiR.mkv, /data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 06 (1280x720 h264) [EE3616A4].mkv, /data/series/Robot Chicken/Season 4/Robot Chicken S04E05 XviD-Moonsong.avi, /data/series/The Daily Show/The Daily Show_010709_PDTV_XviD~Ekolb.avi, "/data/series/QI/QI - Season 2/QI 2x09 - Josie Lawrence, Rich Hall, Johnny Sessions.avi", "/data/series/QI/QI - Season 2/QI 2x08 - Rich Hall, Jo Brand, Greg McCorney.avi"
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
