--- a/.irssi/config
+++ b/.irssi/config
@@ -31,6 +31,13 @@ servers = (
     port = "6667";
     autoconnect = "yes";
     nick = "GGLucas";
+  },
+  {
+    address = "irc.rizon.net";
+    chatnet = "rizon";
+    port = "6667";
+    autoconnect = "yes";
+    nick = "GGLucas";
   }
 );
 
@@ -78,13 +85,21 @@ chatnets = {
   freenode = { type = "IRC"; };
   oftc = { type = "IRC"; };
   foonetic = { type = "IRC"; };
+  rizon = { type = "IRC"; };
 };
 
 channels = (
   { name = "#awesome"; chatnet = "oftc"; autojoin = "Yes"; },
+
   { name = "#archlinux"; chatnet = "freenode"; autojoin = "Yes"; },
+  { name = "#lojban"; chatnet = "freenode"; autojoin = "Yes"; },
+  { name = "#vim"; chatnet = "freenode"; autojoin = "Yes"; },
+
   { name = "#xkcd"; chatnet = "foonetic"; autojoin = "Yes"; },
-  { name = "#curseofsteel"; chatnet = "foonetic"; autojoin = "Yes"; }
+  { name = "#curseofsteel"; chatnet = "foonetic"; autojoin = "Yes"; },
+
+  { name = "#doremi"; chatnet = "rizon"; autojoin = "Yes"; },
+  { name = "#DLQCT"; password = "dlqct"; chatnet = "rizon"; autojoin = "Yes"; }
 );
 
 aliases = {
@@ -241,6 +256,13 @@ statusbar = {
       items = {
         barstart = { priority = "100"; };
         awl_0 = { };
+        barend = { priority = "100"; alignment = "right"; };
+      };
+    };
+    awl_1 = {
+      items = {
+        barstart = { priority = "100"; };
+        awl_1 = { };
         barend = { priority = "100"; alignment = "right"; };
       };
     };
