--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/anime/Nana TV
+latest_dir=/data/series/The Daily Show
 last_url=
 last_dvd_directory=
 
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/anime/Nana TV
+latest_dir=/data/series/The Daily Show
 
 [playlist_contents]
 count=1
-item_0_filename=/data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv
-item_0_duration=1399.73
-item_0_name=[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv
+item_0_filename=/data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi
+item_0_duration=1289.42
+item_0_name=The Daily Show_010809_PDTV_XviD~Ekolb.avi
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_28_(HD_H264_OGG)_[8412331D].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_27_(HD_H264_OGG)_[D645D49F].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_26_(HD_H264_OGG)_[F92FBE0E].mkv, /data/series/The Colbert Report/The Colbert Report_010709_PDTV_XviD~Ekolb.avi, /data/series/Firefly.2002.720p.BluRay.DTS.x264-ESiR/Firefly.2002.Ep02.720p.BluRay.DTS.x264-ESiR.mkv, /data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 06 (1280x720 h264) [EE3616A4].mkv, /data/series/Robot Chicken/Season 4/Robot Chicken S04E05 XviD-Moonsong.avi, /data/series/The Daily Show/The Daily Show_010709_PDTV_XviD~Ekolb.avi, "/data/series/QI/QI - Season 2/QI 2x09 - Josie Lawrence, Rich Hall, Johnny Sessions.avi", "/data/series/QI/QI - Season 2/QI 2x08 - Rich Hall, Jo Brand, Greg McCorney.avi"
+recents=/data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv, /data/anime/Nana TV/[ureshii]NANA_-_39[h264][2168C75E].mkv, /data/anime/Nana TV/[ureshii]NANA_-_38[h264][28BE92FA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_37[h264][F59F17C2].mkv, /data/anime/Nana TV/[IY-F]_NANA_-_Episode_36_(HD_H264_OGG)_[703B734A].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_35_(HD_H264_OGG)_[64FA5417].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_34_(HD_H264_OGG)_[1F2CB390].mkv
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
