--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/series/The Daily Show
+latest_dir=/data/series/QI/Series 6
 last_url=
 last_dvd_directory=
 
@@ -171,7 +171,7 @@ initial_subtitle_track=1
 initial_stereo_mode=0
 
 [mplayer_info]
-mplayer_detected_version=28278
+mplayer_detected_version=28298
 mplayer_user_supplied_version=-1
 
 [instances]
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/series/The Daily Show
+latest_dir=/data/series/QI/Series 6
 
 [playlist_contents]
 count=1
-item_0_filename=/data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi
-item_0_duration=1289.42
-item_0_name=The Daily Show_010809_PDTV_XviD~Ekolb.avi
+item_0_filename=/data/series/QI/Series 6/QI.s06e03.hannibal.avi
+item_0_duration=1715.48
+item_0_name=QI.s06e03.hannibal.avi
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv, /data/anime/Nana TV/[ureshii]NANA_-_39[h264][2168C75E].mkv, /data/anime/Nana TV/[ureshii]NANA_-_38[h264][28BE92FA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_37[h264][F59F17C2].mkv, /data/anime/Nana TV/[IY-F]_NANA_-_Episode_36_(HD_H264_OGG)_[703B734A].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_35_(HD_H264_OGG)_[64FA5417].mkv, /data/anime/Nana TV/[IY-F&Oki]_NANA_-_Episode_34_(HD_H264_OGG)_[1F2CB390].mkv
+recents=/data/series/QI/Series 6/QI.s06e03.hannibal.avi, /data/series/Psych/Season 3/psych.s03e10.720p.hdtv.x264-ctu.mkv, /data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv, /data/anime/Nana TV/[ureshii]NANA_-_39[h264][2168C75E].mkv, /data/anime/Nana TV/[ureshii]NANA_-_38[h264][28BE92FA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_37[h264][F59F17C2].mkv, /data/anime/Nana TV/[IY-F]_NANA_-_Episode_36_(HD_H264_OGG)_[703B734A].mkv
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
