--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/series/QI/Series 6
+latest_dir=/data/anime/Tales of the Abyss
 last_url=
 last_dvd_directory=
 
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/series/QI/Series 6
+latest_dir=/data/anime/Tales of the Abyss
 
 [playlist_contents]
 count=1
-item_0_filename=/data/series/QI/Series 6/QI.s06e03.hannibal.avi
-item_0_duration=1715.48
-item_0_name=QI.s06e03.hannibal.avi
+item_0_filename=/data/anime/Tales of the Abyss/[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv
+item_0_duration=1459.29
+item_0_name=[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/series/QI/Series 6/QI.s06e03.hannibal.avi, /data/series/Psych/Season 3/psych.s03e10.720p.hdtv.x264-ctu.mkv, /data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv, /data/anime/Nana TV/[ureshii]NANA_-_39[h264][2168C75E].mkv, /data/anime/Nana TV/[ureshii]NANA_-_38[h264][28BE92FA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_37[h264][F59F17C2].mkv, /data/anime/Nana TV/[IY-F]_NANA_-_Episode_36_(HD_H264_OGG)_[703B734A].mkv
+recents=/data/anime/Tales of the Abyss/[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv, /data/anime/Gundam 00/Season 2/[gSS]_Gundam_00_S2_-_14_[96A92E1F].mkv, /data/anime/Toaru Majutsu no Index/[Eclipse] Toaru Majutsu no Index - 14 (1280x720 h264) [818978AA].mkv, /data/series/QI/Series 6/QI.s06e03.hannibal.avi, /data/series/Psych/Season 3/psych.s03e10.720p.hdtv.x264-ctu.mkv, /data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv, /data/anime/Nana TV/[ureshii]NANA_-_39[h264][2168C75E].mkv
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
