--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -21,7 +21,7 @@ use_hwac3=false
 use_audio_equalizer=false
 use_volume_option=-1
 loop=false
-osd=0
+osd=3
 add_blackborders_on_fullscreen=false
 file_settings_method=normal
 
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/anime/Tytania
+latest_dir=/data/anime/Nana TV
 last_url=
 last_dvd_directory=
 
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/anime/Tytania
+latest_dir=/data/anime/Nana TV
 
 [playlist_contents]
 count=1
-item_0_filename=/data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv
-item_0_duration=1469.89
-item_0_name=[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv
+item_0_filename=/data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv
+item_0_duration=1404.86
+item_0_name=[ureshii]NANA_-_47[h264][5EEB200A].mkv
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv, /data/anime/Tales of the Abyss/[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv, /data/anime/Gundam 00/Season 2/[gSS]_Gundam_00_S2_-_14_[96A92E1F].mkv, /data/anime/Toaru Majutsu no Index/[Eclipse] Toaru Majutsu no Index - 14 (1280x720 h264) [818978AA].mkv, /data/series/QI/Series 6/QI.s06e03.hannibal.avi, /data/series/Psych/Season 3/psych.s03e10.720p.hdtv.x264-ctu.mkv, /data/series/The Daily Show/The Daily Show_010809_PDTV_XviD~Ekolb.avi, /data/anime/Nana TV/[ureshii]NANA_-_42[h264][F2220F34].mkv, /data/anime/Nana TV/[ureshii]NANA_-_41[h264][16BF0550].mkv, /data/anime/Nana TV/[ureshii]NANA_-_40[h264][F4BBAB58].mkv
+recents=/data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_46[h264][C6937F91].mkv, /data/anime/Nana TV/[ureshii]NANA_-_45[h264][95C85E0A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_44[h264][8E9176CA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_43v2[h264][0AA5DAFD].mkv, /data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv, /data/anime/Tales of the Abyss/[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv, /data/anime/Gundam 00/Season 2/[gSS]_Gundam_00_S2_-_14_[96A92E1F].mkv, /data/anime/Toaru Majutsu no Index/[Eclipse] Toaru Majutsu no Index - 14 (1280x720 h264) [818978AA].mkv, /data/series/QI/Series 6/QI.s06e03.hannibal.avi
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
