--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -21,7 +21,7 @@ use_hwac3=false
 use_audio_equalizer=false
 use_volume_option=-1
 loop=false
-osd=3
+osd=0
 add_blackborders_on_fullscreen=false
 file_settings_method=normal
 
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/anime/Nana TV
+latest_dir=/data/series/Two and a Half Men/Season 6
 last_url=
 last_dvd_directory=
 
@@ -171,7 +171,7 @@ initial_subtitle_track=1
 initial_stereo_mode=0
 
 [mplayer_info]
-mplayer_detected_version=28298
+mplayer_detected_version=28306
 mplayer_user_supplied_version=-1
 
 [instances]
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/anime/Nana TV
+latest_dir=/data/series/Two and a Half Men/Season 6
 
 [playlist_contents]
 count=1
-item_0_filename=/data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv
-item_0_duration=1404.86
-item_0_name=[ureshii]NANA_-_47[h264][5EEB200A].mkv
+item_0_filename=/data/series/Two and a Half Men/Season 6/two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv
+item_0_duration=1214.5
+item_0_name=two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_46[h264][C6937F91].mkv, /data/anime/Nana TV/[ureshii]NANA_-_45[h264][95C85E0A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_44[h264][8E9176CA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_43v2[h264][0AA5DAFD].mkv, /data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv, /data/anime/Tales of the Abyss/[gg]_Tales_of_the_Abyss_-_15_[770068FC].mkv, /data/anime/Gundam 00/Season 2/[gSS]_Gundam_00_S2_-_14_[96A92E1F].mkv, /data/anime/Toaru Majutsu no Index/[Eclipse] Toaru Majutsu no Index - 14 (1280x720 h264) [818978AA].mkv, /data/series/QI/Series 6/QI.s06e03.hannibal.avi
+recents=/data/series/Two and a Half Men/Season 6/two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv, /data/series/Legend of the Seeker/legend.of.the.seeker.s01e05.720p.hdtv.x264-ctu.mkv, /data/series/Legend of the Seeker/Legend.of.the.Seeker.S01E06.720p.HDTV.X264-DIMENSION.mkv, /data/series/Legend of the Seeker/legend.of.the.seeker.s01e07.720p.hdtv.x264-ctu.mkv, /data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_46[h264][C6937F91].mkv, /data/anime/Nana TV/[ureshii]NANA_-_45[h264][95C85E0A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_44[h264][8E9176CA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_43v2[h264][0AA5DAFD].mkv, /data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
