--- a/.config/smplayer/smplayer.ini
+++ b/.config/smplayer/smplayer.ini
@@ -146,7 +146,7 @@ auto_add_to_playlist=true
 add_to_playlist_consecutive_files=false
 
 [directories]
-latest_dir=/data/series/Two and a Half Men/Season 6
+latest_dir=/data/anime/Minami-ke/Minami-ke Okawari
 last_url=
 last_dvd_directory=
 
@@ -217,13 +217,13 @@ auto_get_info=true
 recursive_add_directory=false
 save_playlist_in_config=true
 play_files_from_start=true
-latest_dir=/data/series/Two and a Half Men/Season 6
+latest_dir=/data/anime/Minami-ke/Minami-ke Okawari
 
 [playlist_contents]
 count=1
-item_0_filename=/data/series/Two and a Half Men/Season 6/two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv
-item_0_duration=1214.5
-item_0_name=two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv
+item_0_filename=/data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 09 (1280x720 h264) [3652C422].mkv
+item_0_duration=1450
+item_0_name=[Ayako-sae] Minami-ke Okawari - 09 (1280x720 h264) [3652C422].mkv
 current_item=0
 modified=false
 item_1_filename="/data/series/QI/Series 4/QI - 4x03 - Jeremy Clarkson, Neil Mullarkey, Liza Tarbuck.avi"
@@ -431,7 +431,7 @@ username=
 password=
 
 [history]
-recents=/data/series/Two and a Half Men/Season 6/two.and.a.half.men.s06e12.720p.hdtv.x264-ctu.mkv, /data/series/Legend of the Seeker/legend.of.the.seeker.s01e05.720p.hdtv.x264-ctu.mkv, /data/series/Legend of the Seeker/Legend.of.the.Seeker.S01E06.720p.HDTV.X264-DIMENSION.mkv, /data/series/Legend of the Seeker/legend.of.the.seeker.s01e07.720p.hdtv.x264-ctu.mkv, /data/anime/Nana TV/[ureshii]NANA_-_47[h264][5EEB200A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_46[h264][C6937F91].mkv, /data/anime/Nana TV/[ureshii]NANA_-_45[h264][95C85E0A].mkv, /data/anime/Nana TV/[ureshii]NANA_-_44[h264][8E9176CA].mkv, /data/anime/Nana TV/[ureshii]NANA_-_43v2[h264][0AA5DAFD].mkv, /data/anime/Tytania/[ANBU]_Tytania_-_13_[HQ][7377AEE5].mkv
+recents=/data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 09 (1280x720 h264) [3652C422].mkv, /data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 08 (1280x720 h264) [335AF5B6].mkv, /data/anime/Minami-ke/Minami-ke Okawari/[Ayako-sae] Minami-ke Okawari - 07 (1280x720 h264) [4E87A2EF].mkv, /data/series/Supernatural/Season 4/supernatural.s04e11.repack.720p.hdtv.x264-ctu.mkv, /data/anime/Maria-sama ga Miteru Complete/Maria-sama ga Miteru/[A-Source_Lililicious]_Maria-sama_ga_Miteru_-_01[c1f05f17].avi, /data/series/The Daily Show/The.Daily.Show.2009.01.14.DSR.XviD-LMAO.[VTV].avi, /data/series/Stephen.Fry.In.America.-.S01.DVD/Stephen.Fry.In.America.S01E01.New.World.PROPER.DVDRip.XviD-HAGGiS.avi, /data/series/NCIS/Season 6/NCIS.S06E13.720p.HDTV.X264-DIMENSION.mkv, /data/series/The Colbert Report/The Colbert Report_011209_PDTV_XviD~Ekolb.avi, /data/series/The Daily Show/The.Daily.Show.2009.01.12.PDTV.XviD-aAF.[VTV].avi
 recents\max_items=10
 urls=@Invalid()
 urls\max_items=10
