--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -41,6 +41,11 @@ map <Leader>; <Esc>:javas stumble()<CR><Esc>
 map <Leader>, <Esc>:javas su_rate(1, false, false, false)<CR><Esc>
 map <Leader>. <Esc>:javas su_rate(0, false, false, false)<CR><Esc>
 
+" Noscript
+map <Leader>s <Esc>:noscript toggleperm<CR><Esc>
+map <Leader>S <Esc>:noscript toggletemp<CR><Esc>
+map <Leader>t <Esc>:noscript popup<CR><Esc>
+
 " Faster scrolling
 noremap <C-e> 3<C-e>
 noremap <C-y> 3<C-y>
