--- a/.irssi/config
+++ b/.irssi/config
@@ -301,6 +301,7 @@ settings = {
     neat_colors = "rRgGyYmMcC";
     notify_time = "3000";
     openurl_app_http = "fx '$1'";
+    openurl_watch_mail = "no";
     neat_maxlength = "11";
   };
 };
@@ -321,7 +322,16 @@ keyboard = (
   { key = "meta-9"; id = "change_window"; data = "9"; },
   { key = "meta-0"; id = "change_window"; data = "10"; },
   { key = "^F"; id = "scroll_forward"; data = ""; },
-  { key = "^B"; id = "scroll_backward"; data = ""; }
+  { key = "^B"; id = "scroll_backward"; data = ""; },
+  { key = "^H"; id = "key"; data = "left"; },
+  { key = "^L"; id = "key"; data = "right"; },
+  { key = "^X"; id = "key"; data = "delete"; },
+  { key = "meta-x"; id = "next_window_item"; data = ""; },
+  { key = "meta-c"; id = "erase_line"; data = ""; },
+  { key = "meta-j"; id = "key"; data = "down"; },
+  { key = "meta-k"; id = "key"; data = "up"; },
+  { key = "meta-h"; id = "previous_window"; data = ""; },
+  { key = "meta-l"; id = "next_window"; data = ""; }
 );
 
 windows = { 1 = { immortal = "yes"; name = "(status)"; level = "ALL"; }; };
