--- a/.irssi/config
+++ b/.irssi/config
@@ -322,7 +322,9 @@ keyboard = (
   { key = "meta-9"; id = "change_window"; data = "9"; },
   { key = "meta-0"; id = "change_window"; data = "10"; },
   { key = "^F"; id = "scroll_forward"; data = ""; },
-  { key = "^B"; id = "scroll_backward"; data = ""; },
+  { key = "meta-f"; id = "scroll_forward"; data = ""; },
+  { key = "^B"; id = "scroll_backward"; data = ""; }
+  { key = "meta-b"; id = "scroll_backward"; data = ""; }
   { key = "^H"; id = "key"; data = "left"; },
   { key = "^L"; id = "key"; data = "right"; },
   { key = "^X"; id = "key"; data = "delete"; },
