--- a/.irssi/config
+++ b/.irssi/config
@@ -266,13 +266,6 @@ statusbar = {
         barend = { priority = "100"; alignment = "right"; };
       };
     };
-    awl_1 = {
-      items = {
-        barstart = { priority = "100"; };
-        awl_1 = { };
-        barend = { priority = "100"; alignment = "right"; };
-      };
-    };
   };
 };
 settings = {
@@ -323,8 +316,8 @@ keyboard = (
   { key = "meta-0"; id = "change_window"; data = "10"; },
   { key = "^F"; id = "scroll_forward"; data = ""; },
   { key = "meta-f"; id = "scroll_forward"; data = ""; },
-  { key = "^B"; id = "scroll_backward"; data = ""; }
-  { key = "meta-b"; id = "scroll_backward"; data = ""; }
+  { key = "^B"; id = "scroll_backward"; data = ""; },
+  { key = "meta-b"; id = "scroll_backward"; data = ""; },
   { key = "^H"; id = "key"; data = "left"; },
   { key = "^L"; id = "key"; data = "right"; },
   { key = "^X"; id = "key"; data = "delete"; },
