--- a/.planet/config.ini
+++ b/.planet/config.ini
@@ -1,125 +1,135 @@
-# Planet configuration file
-#
-# This illustrates some of Planet's fancier features with example.
+# Planet config file, works wonders as a feed reader
 
-# Every planet needs a [Planet] section
+# {{{ Global config
 [Planet]
-# name: Your planet's name
-# link: Link to the main page
-# owner_name: Your name
-# owner_email: Your e-mail address
 name = Planet GGLucas
 link = http://me.glacicle.com:81/planet
 owner_name = Lucas de Vries
-owner_email = lucas@glacicle.com
-
-# cache_directory: Where cached feeds are stored
-# new_feed_items: Number of items to take from new feeds
-# log_level: One of DEBUG, INFO, WARNING, ERROR or CRITICAL
-# feed_timeout: number of seconds to wait for any given feed
+owner_email = lucas@tuple-typed.org
 cache_directory = cache
 new_feed_items = 2
 log_level = DEBUG
 feed_timeout = 20
-
-# template_files: Space-separated list of output template files
 template_files = index.html.tmpl atom.xml.tmpl rss20.xml.tmpl rss10.xml.tmpl opml.xml.tmpl foafroll.xml.tmpl
-
-# The following provide defaults for each template:
-# output_dir: Directory to place output files
-# items_per_page: How many items to put on each page
-# days_per_page: How many complete days of posts to put on each page
-#                This is the absolute, hard limit (over the item limit)
-# date_format: strftime format for the default 'date' template variable
-# new_date_format: strftime format for the 'new_date' template variable
-# encoding: output encoding for the file, Python 2.3+ users can use the
-#           special "xml" value to output ASCII with XML character references
-# locale: locale to use for (e.g.) strings in dates, default is taken from your
-#         system. You can specify more locales separated by ':', planet will
-#         use the first available one
 output_dir = /data/web/data/planet
 items_per_page = 60
 days_per_page = 0
 date_format = %B %d, %Y %I:%M %p
 new_date_format = %B %d, %Y
 encoding = utf-8
-
-
-# To define a different value for a particular template you may create
-# a section with the same name as the template file's filename (as given
-# in template_files).
-
-# Provide no more than 7 days articles on the front page
-# [examples/fancy/index.html.tmpl]
-# days_per_page = 7
-
-# If non-zero, all feeds which have not been updated in the indicated
-# number of days will be marked as inactive
 activity_threshold = 0
+# }}}
 
-
-# Options placed in the [DEFAULT] section provide defaults for the feed
-# sections.  Placing a default here means you only need to override the
-# special cases later.
-#[DEFAULT]
-# Hackergotchi default size.
-# If we want to put a face alongside a feed, and it's this size, we
-# can omit these variables.
-
-
-# Any other section defines a feed to subscribe to.  The section title
-# (in the []s) is the URI of the feed itself.  A section can also be
-# have any of the following options:
-# 
-# name: Name of the feed (defaults to the title found in the feed)
-#
-# Additionally any other option placed here will be available in
-# the template (prefixed with channel_ for the Items loop).  We use
-# this trick to make the faces work -- this isn't something Planet
-# "natively" knows about.  Look at fancy-examples/index.html.tmpl
-# for the flip-side of this.
-
-# Comics
+# {{{ Comics
+# xkcd
 [http://www.xkcd.com/rss.xml]
-[http://www.userfriendly.org/rss/uf.rss]
-[http://www.cad-comic.com/rss/rss.xml]
-[http://egscomics.com/egs.rss]
-[http://feeds.penny-arcade.com/pa-mainsite/]
-[http://www.rsspect.com/rss/digitalunrest.xml]
-[http://feeds.feedburner.com/DuelingAnalogs]
-[http://www.smbc-comics.com/rss.php]
-[http://www.myextralife.com/?feed=rss2]
-[http://fanboys-online.com/rss/main.xml]
-[http://www.giantitp.com/comics/oots.rss]
-[http://www.giantitp.com/comics/erf.rss]
-[http://www.vgcats.com/vgcats.rdf.xml]
-[http://www.vgcats.com/super/se.rdf.xml]
-[http://feedproxy.google.com/DilbertDailyStrip]
-[http://www.sinfest.net/rss.php]
-[http://mistakesofyouth.com/rss.xml]
-[http://tinyurl.com/6vqdx4]
-[http://feedproxy.google.com/Explosm]
-[http://www.TheSlackerz.com/Feed/]
 
-# Blogs
+# user friendly
+[http://www.userfriendly.org/rss/uf.rss]
+
+# ctrl-alt-del
+[http://www.cad-comic.com/rss/rss.xml]
+
+# el goonish shive
+[http://egscomics.com/egs.rss]
+
+# penny arcade
+[http://feeds.penny-arcade.com/pa-mainsite/]
+
+# digital unrest
+[http://www.rsspect.com/rss/digitalunrest.xml]
+
+# dueling analogs
+[http://feeds.feedburner.com/DuelingAnalogs]
+
+# saturday morning breakfast cereal
+[http://www.smbc-comics.com/rss.php]
+
+# extralife
+[http://www.myextralife.com/?feed=rss2]
+
+# order of the stick
+[http://www.giantitp.com/comics/oots.rss]
+
+# erfworld
+[http://www.giantitp.com/comics/erf.rss]
+
+# vgcats
+[http://www.vgcats.com/vgcats.rdf.xml]
+
+# super effective
+[http://www.vgcats.com/super/se.rdf.xml]
+
+# dilbert
+[http://feedproxy.google.com/DilbertDailyStrip]
+
+# sinfest
+[http://www.sinfest.net/rss.php]
+
+# mistakes of youth
+[http://mistakesofyouth.com/rss.xml]
+
+# cyanide & happiness
+[http://feedproxy.google.com/Explosm]
+# }}}
+
+# {{{ Blogs
+# Coding Horror
 [http://feeds.feedburner.com/codinghorror/]
+
+# The Daily Vim
 [http://dailyvim.blogspot.com/feeds/posts/default]
+
+# Guido van Rossum's blog
 [http://neopythonic.blogspot.com/feeds/posts/default]
+
+# O'Reilly blog
 [http://www.oreillynet.com/pub/feed/30]
+
+# Linux Torvald's blog
 [http://torvalds-family.blogspot.com/feeds/posts/default]
+
+# Gnu blog
 [http://www.gnu.org/rss/whatsnew.rss]
+
+# Mistakes of Youth blog
 [http://blog.mistakesofyouth.com/feed/]
+
+#  Technotales
 [http://technotales.wordpress.com/feed/]
+
+# Reddit blog
 [http://feeds.feedburner.com/redditblog?format=xml]
+
+# Scott Aaronson's blog
 [http://scottaaronson.com/blog/?feed=rss2]
+
+# XKCD blag
 [http://blag.xkcd.com/feed/]
 
-# Other
+# Stephen Fry's blog
+[http://www.stephenfry.com/blog/?feed=rss2]
+
+# Vimperator blog
+[http://vimperator.org/trac/blog?format=rss]
+# }}} 
+
+# {{{ Other
+# The Daily WTF
 [http://syndication.thedailywtf.com/TheDailyWtf]
+# }}}
 
-# News
-#[http://rss.slashdot.org/Slashdot/slashdot]
+# {{{ News
+# QI News
+[http://www.qi.com/feeds/news.php]
+# }}}
 
-# Planets
+# {{{ Planets
+# Planet Archlinux
 [http://planet.archlinux.org/rss20.xml]
+
+# Planet Python
 [http://planet.python.org/rss20.xml]
+# }}}
+
+# vim: fdm=marker:
