--- a/.muttrc
+++ b/.muttrc
@@ -3,14 +3,21 @@ set from = "lucas@tuple-typed.org"
 set realname = "Lucas de Vries"
 
 # GMail Locations
-set imap_user = "lucasdevries@gmail.com"
-set smtp_url = "smtp://lucasdevries@smtp.gmail.com:587/"
+set imap_user = "lucas@tuple-typed.org"
+set smtp_url = "smtp://lucas@tuple-typed.org@tuple-typed.org:587/"
 
 # Settings for GMail
-set folder = "imaps://imap.gmail.com:993"
+set folder = "imaps://tuple-typed.org"
 set spoolfile = "+INBOX"
-set record="+[Gmail]/Sent Mail"
-set postponed="+[Gmail]/Drafts"
+set record="+Sent"
+set postponed="+Postponed"
+
+# Statusline
+set status_format="mutt-notify '%u' '%f' '-%r-Mutt: %f [Msgs:%?M?%M/?%m%?n? New:%n?%?o? Old:%o?%?d? Del:%d?%?F? Flag:%F?%?t? Tag:%t?%?p? Post:%p?%?b? Inc:%b?%?l? %l?]---(%s/%S)-%>-(%P)---'|"
+
+# Update imap more often
+set imap_idle = yes
+set imap_keepalive = 300
 
 # Cache Files
 set header_cache=~/.mutt/cache/headers
@@ -20,6 +27,9 @@ set certificate_file=~/.mutt/certificates
 # Alias file
 set alias_file=~/.mutt/aliases
 source ~/.mutt/aliases
+
+# Mailing lists
+source ~/.mutt/lists
 
 # Vi binds
 bind index "y" imap-fetch-mail
@@ -40,9 +50,12 @@ macro index I "c!\n" "Reload/Goto Inbox"
 macro pager I "c!\n" "Reload/Goto Inbox"
 
 # Call urlview
-macro index,pager \Cb ":set pipe_decode\n|urlview\n:unset pipe_decode\n"\
-                 "call urlview to extract URLs out of a message"
+macro pager \Cb ":set pipe_decode\n|urlview\n:unset pipe_decode\n"\
+                "call urlview to extract URLs out of a message"
 
+# Mark all as read
+macro index \Cr "<tag-pattern>~N\n<tag-prefix><clear-flag>N" \
+                "Mark all new messages as read"
 
 # Split Window
 set pager_index_lines=15
